Not my first page but a template

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       title="FOAF"
       href="./foaf.rdf"
     />
-    <title>My First Web Page</title>
+    <title>Foaf web page</title>
   </head>
   <body>
     <h1>Tp Foaf</h1>
